package Homework2;

public abstract class Human {

    private String name;

    public String getName() {
        return name;
    }
}
