package Homework2;

public interface ResearchMethods {

    public static void printAllRelatives(String name, FamilyHistory tree, Relation someRelation) {

    }

}
